@@ -1,6 +1,8 @@
 2022/02/22
 • Slash command support for macros replaces older shorthand command.
 • Removed most old-style commands now that they've been replaced with slash commands.
+• Removed all metacommands.
+• Echo command now has a transform attribute.
 2022/02/21
 • Slash command support for praise and shame.
 2022/02/19
